--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <header> 김상훈 홈페이지 온 것을 환영합니다!</header>
     <p>웹 개발자 강의 강좌 리스트</p>
+    <ol>
+    <li>자바프로그래밍</li>
+<li><a href="https://github.com/woogi7942/seoil">HTML</li>
+        
+    </ol>
 </body>
 </html>
