--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>웹 개발자 강의 강좌 리스트</p>
     <ol>
     <li>자바프로그래밍</li>
-<li><a href="https://github.com/woogi7942/seoil">HTML</a></li>
+<li><a href="https://youtube.com">HTML</a></li>
         
     </ol>
 </body>
